Updated help text with GitHub url

--- a/ViewDataViewer/Views/Home/Help.cshtml
+++ b/ViewDataViewer/Views/Home/Help.cshtml
@@ -40,8 +40,11 @@ vd-view help
             <p>In both instances you're welcome to immediately open another connection.</p>
         </div>
 
+        <h5>GitHub</h5>
+        <p>The code for this site is now available on <a href="https://github.com/simonlaszcz/vd-view" target="_blank">GitHub</a>. It targets .NET 5 and should run on any platform where .NET 5 has been installed.</p>
+
         <h5 class="mt-3">Contact</h5>
-        <p>Feel free to contact <a href="mailto:vd-view@laszcz.xyz">me (Simon Laszcz)</a> with any queries, suggestions, comments or bug reports.</p>
+        <p>Feel free to contact <a href="mailto:vd-view@laszcz.xyz">me (Simon Laszcz)</a> with any queries, suggestions, comments or bug reports (or post them on GitHub).</p>       
 
         <h5>Disclaimer</h5>
         <p>The site is provided in good faith for entertainment and maybe some education. The site is not responsible for the content of the sites and services made available and is not responsible for any views expressed therein.</p>
