--- a/ViewDataViewer/Views/Home/Help.cshtml
+++ b/ViewDataViewer/Views/Home/Help.cshtml
@@ -43,6 +43,9 @@ vd-view help
         <h5>GitHub</h5>
         <p>The code for this site is now available on <a href="https://github.com/simonlaszcz/vd-view" target="_blank">GitHub</a>. It targets .NET 5 and should run on any platform where .NET 5 has been installed.</p>
 
+        <p>Code for a client that runs in a *nix terminal is also available on <a target="_blank" href="https://github.com/simonlaszcz/vidtex">GitHub</a>. 
+        It's best to use a terminal emulator like xterm/PuTTY or KiTTY as for full effect, you need to use a font that supports the Viewdata character set (like <a target="_blank" href="https://galax.xyz/TELETEXT/MODE7GX3.TTF">Galax</a>).</p>
+
         <h5 class="mt-3">Contact</h5>
         <p>Feel free to contact <a href="mailto:vd-view@laszcz.xyz">me (Simon Laszcz)</a> with any queries, suggestions, comments or bug reports (or post them on GitHub).</p>       
 
